Remove hard-coded URLs in profile page template.
Use url template tag instead.

--- a/mysite/templates/accounts/profile.html
+++ b/mysite/templates/accounts/profile.html
@@ -1,7 +1,7 @@
 {% if user.is_authenticated %}
   You are logged in as {{ user }}.
-  <a href="/accounts/logout/">Click here to log out.</a>
+  <a href="{% url 'logout' %}">Click here to log out.</a>
 {% else %}
   You are not logged in.
-  <a href="/accounts/login/">Click here to log in.</a>
+  <a href="{% url 'login' %}">Click here to log in.</a>
 {% endif %}
