Modified templates related to authentication to use base template

--- a/mysite/templates/accounts/profile.html
+++ b/mysite/templates/accounts/profile.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 {% if user.is_authenticated %}
   You are logged in as {{ user }}.
   <a href="{% url 'logout' %}">Click here to log out.</a>
@@ -5,3 +7,4 @@
   You are not logged in.
   <a href="{% url 'login' %}">Click here to log in.</a>
 {% endif %}
+{% endblock %}
