--- a/mysite/templates/registration/logged_out.html
+++ b/mysite/templates/registration/logged_out.html
@@ -1,1 +1,4 @@
+{% extends 'base.html' %}
+{% block content %}
 You have been logged out. <a href="{% url 'login' %}">Click here to log in again.</a>
+{% endblock %}
