--- a/mysite/templates/registration/login.html
+++ b/mysite/templates/registration/login.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -8,3 +10,4 @@
 
 <input type="submit" value="login" />
 </form>
+{% endblock %}
