--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Poll: {{ question }} - My amazing Polls application{% endblock %}
 {% block content %}
 <h1>{{ question.question_text }}</h1>
 
