--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Current polls - My amazing Polls application{% endblock %}
 {% block content %}
 
 {% if latest_question_list %}
